--- a/2.2.2.E Navigation et commandes ✅.md
+++ b/2.2.2.E Navigation et commandes ✅.md
@@ -54,9 +54,9 @@ sudo mount -t cifs //cervin.intra.ceff.ch/formation /home/cp-21xxx/ceff/formatio
 sudo mount -t cifs //cervin.intra.ceff.ch/partage /home/cp-21xxx/partage -o credentials=/home/cp-21xxx/ceff/credentials.cifs
 ```
 
-> 📌 Vérifiez dans les paramètres de VMware pour activer le copier-coller entre la machine virtuelle et l'hôte Windows. Si besoin, installez le paquet `open-vm-tools`
+> 📌 Utilisez le terminal Windows connecté en SSH pour faire du copier coller plus facilement :)
 
-Faites attention à remplacer **tous les `username`  par votre nom d'utilisateur de session Ubuntu**.
+Faites attention à remplacer **tous les `cp-21xxx`  par votre nom d'utilisateur de session Ubuntu**.
 
 > 💡 Pour vous rappeler de votre nom d'utilisateur, utilisez la commande `whoami`
 
