--- a/2.2.2.E Navigation et commandes ✅.md
+++ b/2.2.2.E Navigation et commandes ✅.md
@@ -56,6 +56,9 @@ sudo mount -t cifs //cervin.intra.ceff.ch/partage /home/cp-21xxx/partage -o cred
 
 > 📌 Utilisez le terminal Windows connecté en SSH pour faire du copier coller plus facilement :)
 
+> 🚨 **Remplacez tous les `cervin.intra.ceff.ch` par l'adresse IP du serveur du ceff**.  
+> Pour avoir l'adresse IP du serveur, tapez la commande `ping cervin.intra.ceff.ch`.
+
 Faites attention à remplacer **tous les `cp-21xxx`  par votre nom d'utilisateur de session Ubuntu**.
 
 > 💡 Pour vous rappeler de votre nom d'utilisateur, utilisez la commande `whoami`
