--- a/2.2.2.E Navigation et commandes ✅.md
+++ b/2.2.2.E Navigation et commandes ✅.md
@@ -35,7 +35,6 @@ Commencez par reproduire l'architecture de dossiers suivante dans le dossier uti
 			📄 mount.sh
 			📄 credentials.cifs
 			📁 privUSR
-			📁 formation
 			📁 partage
 ```
 Utilisez pour ça les commandes apprises auparavant.
@@ -49,9 +48,7 @@ Utilisez la commande `nano` pour écrire dans le fichier `mount.sh` le contenu s
 
 sudo mount -t cifs //cervin.intra.ceff.ch/PrivUSR/CP-21XXX /home/cp-21xxx/ceff/privUSR -o credentials=/home/cp-21xxx/ceff/credentials.cifs
 
-sudo mount -t cifs //cervin.intra.ceff.ch/formation /home/cp-21xxx/ceff/formation -o credentials=/home/cp-21xxx/ceff/credentials.cifs
-
-sudo mount -t cifs //cervin.intra.ceff.ch/partage /home/cp-21xxx/partage -o credentials=/home/cp-21xxx/ceff/credentials.cifs
+sudo mount -t cifs //cervin.intra.ceff.ch/partage /home/cp-21xxx/ceff/partage -o credentials=/home/cp-21xxx/ceff/credentials.cifs
 ```
 
 > 📌 Utilisez le terminal Windows connecté en SSH pour faire du copier coller plus facilement :)
