--- a/2.4.2.E LAMP ✅.md
+++ b/2.4.2.E LAMP ✅.md
@@ -9,7 +9,7 @@ sudo apt install apache2 mysql-server php8.1
 ## Exercice 1 - changer la page d'accueil
 > 👉 Rappel : À partir de maintenant, on fait tout en NAT
 
-Une fois le paquet `apache2` installé, vérifiez que les ports ouverts ont été modifiés avec la commande `sudo ufw app list`. Vous devriez y voir des lignes avec la mention `apache2`.
+Une fois le paquet `apache2` installé, vérifiez que les ports ouverts ont été modifiés avec la commande `sudo ufw app list`. Vous devriez y voir des lignes avec la mention `Apache`.
 
 Essayez simplement de modifier la page d'accueil par défaut d'Apache.
 Pour celà, allez modifier les fichiers dans `/var/www/html`. Tentez d'y ajouter une image d'une quelconque façon !
@@ -30,6 +30,27 @@ Commandes utiles (à vous de les décrypter pour comprendre leur fonctionnement 
 > 💡 N'oubliez pas que lorsqu'on n'est pas dans le dossier utilisateur, il faut utiliser `sudo` pour agir sur les fichiers
 
 Développez-vous un petit site, puis accédez-y depuis le navigateur de votre machine physique. L'adresse URL est l'adresse IP de votre machine virtuelle.
+
+> 👇 Voici l'arborescente des dossiers / fichiers importants de votre système :
+
+```yaml
+/home 📂
+	/cp-21xxx 📂          # Dossier utilisateur
+
+/etc 📂                  
+	/apache2 📂           # Fichiers de config d'Apache
+		/sites-available 📂
+			/000-default.conf 📄
+			/monsite.conf 📄🆕
+
+/var 📂
+	/www 📂               # Fichiers des documents
+		/html 📂          # des sites
+			/index.html 📄
+		/monsite 📂🆕
+			/index.html 📄🆕
+
+```
 
 ---
 
